--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "auto-typer-vue3": "^1.2.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
+    "markdown-it": "^14.1.0",
     "portfolio": "file:",
     "quill": "^2.0.3",
     "vue": "^3.5.12",
